EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==02/22/2010==
Trevius: Added 2 new fields (prim_melee_type and sec_melee_type) to the npc_types table to allow setting attack animations/messages to go with weapon models (Default is 28 - Hand to Hand)
Trevius: Added Perl Quest Objects; GetPrimSkill(), GetSecSkill(), SetPrimSkill(skill_type), SetSecSkill(skill_type) for altering the above setting temporarily.

Required SQL: utils/sql/svn/1259_npc_skill_types.sql

==02/17/2010==
Trevius: Added new quest::untraindiscs() command to untrain all disciplines
Trevius: Added Client Perl Objects UntrainDisc(slot) and UntrainDiscAll() to untrain either just 1 discipline slot or all disciplines
Trevius: Added functionality to quest::traindisc() to allow it to use the spell_globals table and system
Trevius: Added in code to prevent a zone crash related to group/raids using group recourse spells as a temporary fix until the Spells branch goes live

==02/15/2010==
Gaeorn: (iRFNA) Fixed flaw in IsPureNukeSpell() logic. Fixes bug where bots were healing enemies.
Derision: Added default value to suspendeduntil column in utils/sql/svn/1195_account_suspendeduntil.sql

==02/07/2010==
Derision: Reverted cross-zone group invites from Rev1086

==02/06/2010==
Trevius: Added an account status setting option to the database page of the EQEmu Web Tool.

==02/02/2010==
Richardo: Added options wep1 and wep2 to #npcedit to allow changing primary and secondary weapon models.

==02/01/2010==
Trevius: Renamed BoolNPCSpecAtks() to HasNPCSpecialAtk() to fit better into the proper naming format and to make more sense.
Derision: Added $client quest methods to get current PVP point and crystal counts and to award PVP points and crystals.
Derision: Mapped out the part of the player profile used for recording recent PVP kills.
Derision: Removed EVENT_WAYPOINT. Use EVENT_WAYPOINT_ARRIVE or EVENT_WAYPOINT_DEPART instead.

==01/31/2010==