@@ -6414,6 +6414,39 @@ XS(XS_Mob_HasNPCSpecialAtk)
 	XSRETURN(1);
 }
 
+XS(XS_Mob_SendAppearanceEffect); /* prototype to pass -Wmissing-prototypes */
+XS(XS_Mob_SendAppearanceEffect)
+{
+	dXSARGS;
+	if (items < 2 || items > 6)
+		Perl_croak(aTHX_ "Usage: Mob::SendAppearanceEffect(THIS, parm1, parm2, parm3, parm4, parm5)");
+	{
+		Mob *		THIS;
+		sint32		parm1 = (sint32)SvIV(ST(1));
+		sint32		parm2 = 0;
+		sint32		parm3 = 0;
+		sint32		parm4 = 0;
+		sint32		parm5 = 0;
+
+		if (sv_derived_from(ST(0), "Mob")) {
+			IV tmp = SvIV((SV*)SvRV(ST(0)));
+			THIS = INT2PTR(Mob *,tmp);
+		}
+		else
+			Perl_croak(aTHX_ "THIS is not of type Mob");
+		if(THIS == NULL)
+			Perl_croak(aTHX_ "THIS is NULL, avoiding crash.");
+
+		if (items > 2)	{	parm2 = (sint32)SvIV(ST(2));	}
+		if (items > 3)	{	parm3 = (sint32)SvIV(ST(3));	}
+		if (items > 4)	{	parm4 = (sint32)SvIV(ST(4));	}
+		if (items > 5)	{	parm5 = (sint32)SvIV(ST(5));	}
+
+		THIS->SendAppearanceEffect(parm1, parm2, parm3, parm4, parm5);
+	}
+	XSRETURN_EMPTY;
+}
+
 #ifdef __cplusplus
 extern "C"
 #endif
@@ -6659,6 +6692,7 @@ XS(boot_Mob)
 		newXSproto(strcpy(buf, "FindGroundZ"), XS_Mob_FindGroundZ, file, "$$$;$");
 		newXSproto(strcpy(buf, "ProjectileAnim"), XS_Mob_ProjectileAnim, file, "$$$;$$$$$");
 		newXSproto(strcpy(buf, "HasNPCSpecialAtk"), XS_Mob_HasNPCSpecialAtk, file, "$$");
+		newXSproto(strcpy(buf, "SendAppearanceEffect"), XS_Mob_SendAppearanceEffect, file, "$$:$$$$");
 	XSRETURN_YES;
 }
 
